// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginTop": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      Beginner
    </Text>
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 14,
          "textAlign": "right",
          "width": "100%",
        }
      }
    >
      0/1 trainings
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#f1f1f1",
          "borderRadius": 2,
          "height": 3,
          "marginTop": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "backgroundColor": "#2a9e91",
              "borderRadius": 5,
              "width": "50%",
            },
            Object {
              "width": "0%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Program /> renders correctly when finished 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginTop": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "#fff",
        "paddingHorizontal": 20,
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      Beginner
    </Text>
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 14,
          "textAlign": "right",
          "width": "100%",
        }
      }
    >
      2/2 trainings
       👍🎉
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#f1f1f1",
          "borderRadius": 2,
          "height": 3,
          "marginTop": 5,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "backgroundColor": "#2a9e91",
              "borderRadius": 5,
              "width": "50%",
            },
            Object {
              "width": "100%",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
